kubernetes/generated/platform/ops-routes/test/kustomization.yaml
# GENERATED by kubernetes/generate.py — do not edit.
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- routes.yaml
